# gateway/gateway-controller/pkg/utils/llm_provider_transformer.go
@@ -24,16 +24,17 @@ func (t *LLMProviderTransformer) Transform(input any, output *api.APIConfigurati
 	}
 
 	// @TODO: Step 1) Configure token based rate-limiting policy based on template configs
-	_, err := t.store.GetTemplateByName(provider.Spec.Template)
+	_, err := t.store.GetTemplateByHandle(provider.Spec.Template)
 	if err != nil {
 		return nil, fmt.Errorf("failed to retrieve template '%s': %w", provider.Spec.Template, err)
 	}
 
 	output.Kind = api.RestApi
 	output.ApiVersion = api.GatewayApiPlatformWso2Comv1alpha1
+	output.Metadata = provider.Metadata
 
 	spec := api.APIConfigData{}
-	spec.DisplayName = provider.Spec.Name
+	spec.DisplayName = provider.Spec.DisplayName
 	spec.Version = provider.Spec.Version
 	spec.Context = constants.BASE_PATH
 	if provider.Spec.Context != nil {
